@@ -1,3 +1,7 @@
+2007-09-30  Alan Modra  <amodra@bigpond.net.au>
+
+	* elflink.c: Formatting.
+
 2007-09-29  Alan Modra  <amodra@bigpond.net.au>
 
 	* elflink.c (resolve_symbol): Handle symbols in SEC_MERGE
